sql/sql_lex.cc
@@ -2689,30 +2689,22 @@ void st_select_lex::print_order(String *str,
   {
     if (order->counter_used)
     {
-      if (!(query_type & QT_VIEW_INTERNAL))
-      {
-        char buffer[20];
-        size_t length= my_snprintf(buffer, 20, "%d", order->counter);
-        str->append(buffer, (uint) length);
-      }
-      else
-      {
-        /* replace numeric reference with expression */
-        if (order->item[0]->type() == Item::INT_ITEM &&
-            order->item[0]->basic_const_item())
-        {
-          char buffer[20];
-          size_t length= my_snprintf(buffer, 20, "%d", order->counter);
-          str->append(buffer, (uint) length);
-          /* make it expression instead of integer constant */
-          str->append(STRING_WITH_LEN("+0"));
-        }
-        else
-          (*order->item)->print(str, query_type);
-      }
+      char buffer[20];
+      size_t length= my_snprintf(buffer, 20, "%d", order->counter);
+      str->append(buffer, (uint) length);
     }
     else
-      (*order->item)->print(str, query_type);
+    {
+      /* replace numeric reference with equivalent for ORDER constant */
+      if (order->item[0]->type() == Item::INT_ITEM &&
+          order->item[0]->basic_const_item())
+      {
+        /* make it expression instead of integer constant */
+        str->append(STRING_WITH_LEN("''"));
+      }
+      else
+        (*order->item)->print(str, query_type);
+    }
     if (!order->asc)
       str->append(STRING_WITH_LEN(" desc"));
     if (order->next)
